--- a/app/src/component/layout/dashboard/content/content.scss
+++ b/app/src/component/layout/dashboard/content/content.scss
@@ -4,6 +4,7 @@
     min-height: 100%;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     margin: 0 auto;
 
     .container {
@@ -14,7 +15,6 @@
             height: 50px;
             display: flex;
             align-items: center;
-            // border-bottom: 1px solid $PrimaryBorderColor;
         }
 
         .container-element {
@@ -22,7 +22,11 @@
             border-top: 1px solid $PrimaryBorderColor;
             display: flex;
             align-items: center;
+            flex-wrap: wrap;
+        }
 
+        .container-btn-elements {
+            margin: 2px;
         }
     }
 }   
